--- a/android-matter-home-app/app/src/main/res/values/colors.xml
+++ b/android-matter-home-app/app/src/main/res/values/colors.xml
@@ -18,8 +18,8 @@
 <resources>
     <color name="white">#FFFFFFFF</color>
     <color name="md.sys.color.primary_container">#FFEADDFF</color>
-    <color name="md.sys.color.primary">#FF6750A4</color>
-    <color name="md.sys.color.on_primary_container">#FF21005D</color>
+    <color name="md.sys.color.primary">#3F83E9</color> // Top Bar
+    <color name="md.sys.color.on_primary_container">#3B7BDB</color> //+
     <color name="md.sys.color.secondary_container">#FFE8DEF8</color>
     <color name="md.sys.color.secondary">#FF625B71</color>
     <color name="md.sys.color.background">#FFFFFBFE</color>
