--- a/android-matter-home-app/app/src/main/res/navigation/navigation.xml
+++ b/android-matter-home-app/app/src/main/res/navigation/navigation.xml
@@ -19,7 +19,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation.xml"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/loginFragment">
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.google.homesampleapp.screens.home.HomeFragment"
@@ -101,4 +101,13 @@
         android:name="com.google.homesampleapp.screens.settings.DummyDeviceDialogFragment"
         android:label="fragment_dummy_device_info"
         tools:layout="@layout/fragment_dummy_device" />
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.google.homesampleapp.ui.login.LoginFragment"
+        android:label="fragment_login"
+        tools:layout="@layout/fragment_login" >
+        <action
+            android:id="@+id/action_loginFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
 </navigation>
