--- a/android-matter-home-app/app/src/main/res/layout/fragment_device.xml
+++ b/android-matter-home-app/app/src/main/res/layout/fragment_device.xml
@@ -24,28 +24,28 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true">
-
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            style="?attr/collapsingToolbarLayoutLargeStyle"
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/collapsingToolbarLayoutLargeSize">
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true">
 
-            <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/topAppBar"
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                style="?attr/collapsingToolbarLayoutLargeStyle"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:title="Lightbulb A"
-                app:menu="@menu/device_topappbar_menu"
-                app:navigationIcon="@drawable/gs_arrow_back_fill1_vd_theme_24"
-                android:elevation="0dp"/>
+                android:layout_height="?attr/collapsingToolbarLayoutLargeSize">
 
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
+                <com.google.android.material.appbar.MaterialToolbar
+                    android:id="@+id/topAppBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    app:title="Lightbulb A"
+                    app:menu="@menu/device_topappbar_menu"
+                    app:navigationIcon="@drawable/gs_arrow_back_fill1_vd_theme_24"
+                    android:elevation="0dp"/>
 
-    </com.google.android.material.appbar.AppBarLayout>
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+        </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
@@ -55,9 +55,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
                 android:layout_margin="16dp"
-                >
+                android:orientation="vertical">
 
                 <RelativeLayout
                     android:id="@+id/stateLayout"
@@ -69,100 +68,71 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/onOffTextView2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_marginLeft="332dp"
+                        android:textAppearance="?attr/textAppearanceBody1"
+                        tools:text="19" />
+
+                    <TextView
                         android:id="@+id/onOffTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_centerVertical="true"
                         android:textAppearance="?attr/textAppearanceBody1"
-                        tools:text="ON" />
-
-                    <com.google.android.material.switchmaterial.SwitchMaterial
-                        android:id="@+id/onoff_switch"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true" />
+                        tools:text="Current Temperature" />
 
                 </RelativeLayout>
 
-                <RelativeLayout
-                    android:id="@+id/shareLayout"
+                <Button
+                    android:id="@+id/trackrButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
                     android:layout_marginTop="30sp"
-                    android:background="@drawable/device_item_shape_off"
-                    >
-
-                    <TextView
-                        android:id="@+id/shareLine1TextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:text="Share your Lightbulb A"
-                        android:textAppearance="?attr/textAppearanceBody1" />
-
-                    <TextView
-                        android:id="@+id/shareLine2TextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/shareLine1TextView"
-                        android:textAppearance="?attr/textAppearanceBody2"
-                        android:text="You can share this device to control it from other apps or services"/>
-
-                    <Button
-                        android:id="@+id/shareButton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Share"
-                        app:icon="@drawable/ic_baseline_share_24"
-                        android:layout_below="@+id/shareLine2TextView"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginTop="30sp"
-                        />
-
-                </RelativeLayout>
+                    android:layout_marginRight="25dp"
+                    android:text="Connect to trackR"
+                    app:icon="@drawable/ic_baseline_share_24" />
 
                 <com.google.android.material.divider.MaterialDivider
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginVertical="36sp"
-                    />
+                    android:layout_marginVertical="36sp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    >
+                    android:orientation="vertical">
+
                     <TextView
                         android:id="@+id/techInfoTitleTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textAppearance="?attr/textAppearanceBody1"
                         android:layout_alignParentLeft="true"
-                        android:text="Technical Information"/>
+                        android:text="Technical Information"
+                        android:textAppearance="?attr/textAppearanceBody1" />
 
                     <TextView
                         android:id="@+id/techInfoDetailsTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textAppearance="?attr/textAppearanceBody2"
                         android:layout_alignParentLeft="true"
                         android:layout_marginTop="10sp"
+                        android:textAppearance="?attr/textAppearanceBody2"
                         tools:text="Added on 04.05.22 19:34:29\nID:1 VID:87 PID:876\n
-Device type: 0x0100"/>
+Device type: 0x0100" />
                 </LinearLayout>
 
                 <Button
                     android:id="@+id/removeButton"
+                    style="@style/Widget.MaterialComponents.Button.TextButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Remove device"
-                    app:icon="@drawable/ic_baseline_delete_24"
                     android:layout_marginTop="60sp"
-                    style="@style/Widget.MaterialComponents.Button.TextButton"
-                    />
+                    android:text="Remove device"
+                    app:icon="@drawable/ic_baseline_delete_24" />
 
             </LinearLayout>
 
