--- a/android-matter-home-app/app/src/main/res/layout/fragment_device.xml
+++ b/android-matter-home-app/app/src/main/res/layout/fragment_device.xml
@@ -62,7 +62,7 @@
                     android:id="@+id/stateLayout"
                     style="@style/MaterialAlertDialog.Material3"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="100dp"
                     android:layout_marginTop="6dp"
                     android:background="@drawable/device_item_shape_off"
                     android:orientation="horizontal">
@@ -81,9 +81,42 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
-                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="12dp"
                         android:textAppearance="?attr/textAppearanceBody1"
                         tools:text="Current Temperature" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/sendLayout"
+                    style="@style/MaterialAlertDialog.Material3"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:layout_marginTop="6dp"
+                    android:background="@drawable/device_item_shape_off"
+                    android:orientation="horizontal">
+
+                <EditText
+                        android:id="@+id/newtemp"
+                        android:layout_width="150dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="6dp"
+                        android:layout_marginEnd="24dp"
+                        android:autofillHints="Temperature"
+                        android:hint="Temperature"
+                        android:inputType="number"
+                        android:selectAllOnFocus="true"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <Button
+                        android:id="@+id/newtempbut"
+                        android:layout_width="100dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="150dp"
+                        android:layout_marginTop="6dp"
+                        android:text="Send" />
 
                 </RelativeLayout>
 
@@ -138,5 +171,19 @@ Device type: 0x0100" />
 
         </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <EditText
+        android:id="@+id/editTextNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="number" />
+
+    <EditText
+        android:id="@+id/editTextNumber2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="number" />
 
 </layout>
